--- a/index.html
+++ b/index.html
@@ -45,13 +45,13 @@
                         <a href="#" class="icon">
                             <i class="fab fa-facebook"></i>
                         </a>
-                        <a href="#" class="icon">
+                        <a href="https://instagram.com/ugurakcora" class="icon">
                             <i class="fab fa-instagram"></i>
                         </a>
                         <a href="#" class="icon">
                             <i class="fab fa-google-plus-g"></i>
                         </a>
-                        <a href="#" class="icon">
+                        <a href="https://twitter.com/uguurakcora" class="icon">
                             <i class="fab fa-twitter"></i>
                         </a>
                     </div>
