--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <div class="modal">
-        <img src="img/logo.png" alt="">
+        <img src="img/logo.jpg" alt="">
         <div class="close"></div>
     </div>
     
